# xArm-7

./: .gitignore  ARCHITECTURE.md  PLAN.md  README.md  pyproject.toml
.cursor/rules/: xarm7-driver-context.mdc
config/: config.example.yaml
scripts/: log_pose_to_csv.py  phase0_smoke_test.py  phase1_prepare.py  phase4_velocity_pulse.py  run_phases.py
src/xarm7_driver/: __init__.py  driver.py  errors.py  telemetry.py  utils.py
