[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "xarm7-cartesian-velocity"
version = "0.0.1"
description = "Safety-first Python driver layer for xArm7 Cartesian velocity control (mode 5)"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "Filip Larsson" }]
dependencies = [
  "xarm-python-sdk>=1.17.3,<2.0.0",  
  "pyyaml>=6.0",
]

[project.optional-dependencies]
dev = [
  "ruff>=0.4.0",
  "pytest>=8.0.0",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
target-version = "py310"